dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__ack_burst__multiple_contexts_each_produce_submission.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG event=on_ack_eliciting prev=Idle next=Scheduled location=dc/s2n-quic-dc/src/endpoint/tasks/tests/ack_burst.rs
0 [main] DEBUG event=on_ack_eliciting prev=Idle next=Scheduled location=dc/s2n-quic-dc/src/endpoint/tasks/tests/ack_burst.rs
0 [main] DEBUG event=on_ack_eliciting prev=Idle next=Scheduled location=dc/s2n-quic-dc/src/endpoint/tasks/tests/ack_burst.rs
0 [main] DEBUG event=on_flush prev=Scheduled next=Flushed location=dc/s2n-quic-dc/src/endpoint/recv.rs
0 [main] DEBUG event=on_flush prev=Scheduled next=Flushed location=dc/s2n-quic-dc/src/endpoint/recv.rs
0 [main] DEBUG event=on_flush prev=Scheduled next=Flushed location=dc/s2n-quic-dc/src/endpoint/recv.rs
